--- a/EssentialTools/EssentialTools.csproj
+++ b/EssentialTools/EssentialTools.csproj
@@ -99,6 +99,7 @@
     <Compile Include="LinqValueCalculator.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShoppingCart.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
