--- a/EssentialTools/EssentialTools.csproj
+++ b/EssentialTools/EssentialTools.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Models\FlexibleDiscountHelper.cs" />
     <Compile Include="Models\IValueCalculator.cs" />
     <Compile Include="Models\LinqValueCalculator.cs" />
+    <Compile Include="Models\MinnumumDiscountHelper.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\ShoppingCart.cs" />
